# NCAA-Football-Discord-Bot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
ncaa_football_discord_bot/: bot.py  main.py
ncaa_football_discord_bot/cogs/: dynasty.py
