[tool.poetry]
name = "ncaa football discord bot"
version = "0.1.0"
description = ""
authors = ["haruvon <tech@devinswift.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.6.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
